--- a/notebooks/genius_credits.ipynb
+++ b/notebooks/genius_credits.ipynb
@@ -722,7 +722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for artist in genius_artist_ids_single:\n",
+    "## for artist in genius_artist_ids_single:\n",
     "    page_no = 1\n",
     "    url = 'https://api.genius.com/artists/' + str(list(list(artist.values())[0].values())[0]) + '/songs/?per_page=50&page=' + str(page_no) + access_token\n",
     "    try:\n",
