--- a/notebooks/genius_credits.ipynb
+++ b/notebooks/genius_credits.ipynb
@@ -648,8 +648,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/genius_song_ids.json', 'w') as f:\n",
-    "    json.dump([], f)"
+    "# with open('../data/genius_song_ids.json', 'w') as f:\n",
+    "#     json.dump([], f)"
    ]
   },
   {
@@ -733,7 +733,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('../data/genius_song_ids.json', mode='r', encoding='utf-8') as f:\n",
+    "    genius_song_ids = json.load(f)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -795,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
