gathering genius song details

--- a/notebooks/musicbrainz.ipynb
+++ b/notebooks/musicbrainz.ipynb
@@ -11,6 +11,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install musicbrainzngs "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import musicbrainzngs as mb\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mb.get_recordings_by_isrc('USLIC0600478', \n",
+    "# #                           includes=['artist-credits', 'work-rels']\n",
+    "#                          )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
