created tables for various feats

--- a/notebooks/genius_credits.ipynb
+++ b/notebooks/genius_credits.ipynb
@@ -23,7 +23,7 @@
     "import time\n",
     "import psycopg2 as pg2\n",
     "from psycopg2.extras import RealDictCursor, Json\n",
-    "from sqlalchemy import "
+    "from sqlalchemy import create_engine"
    ]
   },
   {
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1485,16 +1485,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.base.Connection at 0x7f96b97e60f0>"
+       "<sqlalchemy.engine.base.Connection at 0x7f143515da20>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1548,7 @@
        "(410100, 1)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1569,7 +1569,7 @@
        "Name: 349999, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1597,22 +1597,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "finished pulling song_loc 300000\n",
-      "finished pulling song_loc 305000\n",
-      "finished pulling song_loc 310000\n",
-      "finished pulling song_loc 315000\n",
-      "finished pulling song_loc 320000\n",
-      "finished pulling song_loc 325000\n",
-      "finished pulling song_loc 330000\n",
-      "finished pulling song_loc 340000\n",
-      "finished pulling song_loc 345000\n"
+      "finished pulling song_loc 350000\n",
+      "finished pulling song_loc 355000\n",
+      "finished pulling song_loc 360000\n",
+      "finished pulling song_loc 365000\n",
+      "finished pulling song_loc 370000\n",
+      "finished pulling song_loc 375000\n",
+      "finished pulling song_loc 380000\n",
+      "finished pulling song_loc 385000\n",
+      "finished pulling song_loc 390000\n",
+      "finished pulling song_loc 395000\n",
+      "finished pulling song_loc 400000\n",
+      "finished pulling song_loc 405000\n",
+      "finished pulling song_loc 410000\n"
      ]
     }
    ],
@@ -1630,7 +1634,7 @@
     "        song_details_9.append(requests.get(url, headers=headers).json())\n",
     "    if num % 5000 == 0:\n",
     "        print('finished pulling song_loc {}'.format(num))\n",
-    "with open('../data/genius_song_details_8.json', 'w') as f:\n",
+    "with open('../data/genius_song_details_9.json', 'w') as f:\n",
     "    json.dump(song_details_9, f)"
    ]
   },
@@ -1677,21 +1681,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'song_details' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-c79f6f958171>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# song_details[0]['response']['song']                                   actual song details\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# song_details[0]['response']['song']['id']                             song id\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0msong_details\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'response'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'song'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m# song_details[0]['response']['song']['writer_artists']                 credits!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# song_details[0]['response']['song']['writer_artists'][0]              index for individual writer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'song_details' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# song_details[0]['response']['song']                                   actual song details\n",
     "# song_details[0]['response']['song']['id']                             song id\n",
@@ -1716,7 +1708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
