--- a/notebooks/spotipy.ipynb
+++ b/notebooks/spotipy.ipynb
@@ -1624,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1633,7 +1633,7 @@
        "(40, 11)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1944,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2522,6 +2522,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.set_index('Unnamed: 0', inplace=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3094,6 +3103,133 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Dealing with Genres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['genres'] = df['genres'].apply(lambda x: x.split(sep=','))\n",
+    "df['genres'] = df['genres'].apply(lambda x: [i.replace('[', '') for i in x])\n",
+    "df['genres'] = df['genres'].apply(lambda x: [i.replace(']', '') for i in x])\n",
+    "df['genres'] = df['genres'].apply(lambda x: [i.replace('\\'', '') for i in x])\n",
+    "df['genres'] = df['genres'].apply(lambda x: [i.strip() for i in x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['boy band', 'dance pop', 'europop', 'pop', 'post-teen pop']"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['genres'].loc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genre_per_artist = df[['genres', 'id']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>genres</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[boy band, dance pop, europop, pop, post-teen ...</td>\n",
+       "      <td>6Ff53KvcvAj5U7Z1vojB5o</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[antiviral pop, comedy rock, comic]</td>\n",
+       "      <td>1bDWGdIC2hardyt55nlQgG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[alternative metal, nu metal, post-grunge, rap...</td>\n",
+       "      <td>0REMf7H0VP6DwfZ9MbuWph</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[alternative rock, folk, folk-pop, lilith, mel...</td>\n",
+       "      <td>0MBIKH9DjtBkv8O3nS6szj</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[boy band, dance pop, gangster rap, hip hop, h...</td>\n",
+       "      <td>7urq0VfqxEYEEiZUkebXT4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              genres                      id\n",
+       "0  [boy band, dance pop, europop, pop, post-teen ...  6Ff53KvcvAj5U7Z1vojB5o\n",
+       "1                [antiviral pop, comedy rock, comic]  1bDWGdIC2hardyt55nlQgG\n",
+       "2  [alternative metal, nu metal, post-grunge, rap...  0REMf7H0VP6DwfZ9MbuWph\n",
+       "3  [alternative rock, folk, folk-pop, lilith, mel...  0MBIKH9DjtBkv8O3nS6szj\n",
+       "4  [boy band, dance pop, gangster rap, hip hop, h...  7urq0VfqxEYEEiZUkebXT4"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genre_per_artist.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### How Many Genres Are There?\n",
     "\n",
     "Before I decide how to deal with the inclusion or non-inclusion of genres in my dataset, I'll see what the overall scope of genres looks like, independent of the artists they're attached to"
@@ -3101,16 +3237,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"['boy band'\", \" 'dance pop'\", \" 'europop'\", \" 'pop'\", \" 'post-teen pop']\"]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "genre_list = df.genres.tolist()"
+    "genre_list = df.genres.tolist()\n",
+    "genre_list = [i.split(sep=',') for i in genre_list]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genre_list = [[i.replace('[', '') for i in lst] for lst in genre_list]\n",
+    "genre_list = [[i.replace(']', '') for i in lst] for lst in genre_list]\n",
+    "genre_list = [[i.replace(\"\\'\", '') for i in lst] for lst in genre_list]\n",
+    "genre_list = [[i.strip() for i in lst] for lst in genre_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3118,29 +3278,47 @@
     "\n",
     "for genre_set in genre_list:\n",
     "    for genre in genre_set:\n",
-    "        all_genres.append(genre)\n",
-    "        \n",
-    "all_genres = set(all_genres)"
+    "        all_genres.append(genre)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "765"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(all_genres)"
+    "all_genres = set(all_genres)\n",
+    "len(all_genres)\n",
+    "all_genres = list(all_genres)\n",
+    "del all_genres[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genre_df = pd.DataFrame(all_genres, columns=['genre'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genre_df.to_csv('../data/genres.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/all_genres.pkl', 'wb') as f:\n",
+    "    pickle.dump(all_genres, f)"
    ]
   },
   {
@@ -3171,7 +3349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
